authentication app + several changes

--- a/catalog/templates/catalog/dev_banner.html
+++ b/catalog/templates/catalog/dev_banner.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<h1>SITE IS UNDER CONSTRUCTION</h1>
+<h1>SITE IS UNDER CONSTRUCTION {{user}}</h1>
 
 <div class="row">
     <div class="col-sm-2">
