--- a/catalog/templates/catalog/product_detail.html
+++ b/catalog/templates/catalog/product_detail.html
@@ -32,7 +32,7 @@
                 {% for item in product_variants %}
                 <div class="btn-group" role="group" align="center">
                 <button type="button" class="btn btn-secondary">
-                        {{item.name}}
+                        {{item.weight_override}}
                 </button>
                 </div>
 
