--- a/catalog/templates/snippets/nav.html
+++ b/catalog/templates/snippets/nav.html
@@ -42,7 +42,10 @@
         <!--<li><a href="#">Contact</a></li>-->
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#"><span class="glyphicon glyphicon-user"></span> Your Account</a></li>
+          {% if user.is_authenticated%}
+
+        <li><a href="#"><span class="glyphicon glyphicon-user"></span> {{ user }} | Your Account</a></li>
+          {% endif %}
         <li><a href="#"><span class="glyphicon glyphicon-shopping-cart"></span> Cart</a></li>
       </ul>
     </div>
