--- a/auth_app/templates/auth_app/login.html
+++ b/auth_app/templates/auth_app/login.html
@@ -1,12 +1,19 @@
 {% extends 'catalog/_base.html' %}
 
 {% block content %}
-<h1>Login,sir</h1>
 
-<form action="{% url 'auth:login' %}" method="POST">
-    {% csrf_token %}
-    {{form.as_p}}
-    <input type="submit" value="Saubmit">
-</form>
+<div class="row">
+    <div class="col-sm-4"></div>
+    <div class="col-sm-7">
+        <h3>Введите свои учетные данные</h3>
+        <form action="{% url 'account:login' %}" method="post">
+            {%csrf_token%}
+            {{form.as_p}}
+            <button type="submit">Войти</button>
+        </form>
+    </div>
+    <div class="col-sm-3"></div>
+</div>
+
 
 {% endblock %}
