--- a/catalog/templates/catalog/product_detail.html
+++ b/catalog/templates/catalog/product_detail.html
@@ -1,49 +1,39 @@
 {% extends 'catalog/_base.html' %}
 
+{% load static %}
+
 {% block content %}
 
-
-
-
-
-
-
-
-
 <div class="row">
-    <div class="col-sm-2">
-        <p>Some text1...</p>
-    </div>
+    <div class="col-sm-3"></div>
     <div class="col-sm-3">
-        <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+        {% if object.product_type.category_id == 1 %}
+        <img src="{% static 'catalog/oolong_tea.jpg' %}" class="img-responsive" style="width:100%" alt="Second slide"/>
+        {% else %}
+        <img src="{% static 'catalog/coffe_grains.jpg' %}" class="img-responsive" style="width:100%" alt="Second slide"/>
+        {% endif %}
     </div>
-
-
-
-<div class="col-sm-4">
-
-        <div class="panel">
-            <div class="panel-heading" align="center">
-                <h1>{{ object.name }}</h1>
-                <p>{{ object.product_type}}</p>
-            </div>
-            <div class="panel-body">{{object.description}}</div>
-            <div class="panel-footer">
-                {% for item in product_variants %}
-                <div class="btn-group" role="group" align="center">
-                <button type="button" class="btn btn-secondary">
-                        {{item.weight_override}}
-                </button>
+    <div class="col-sm-4">
+            <div class="panel">
+                <div class="panel-heading" align="center">
+                    <h1>{{ object.name }}</h1>
+                    <p>{{ object.product_type}}</p>
+                </div>
+                <div class="panel-body">{{object.description}}</div>
+                {% if user.is_authenticated%}
+                <div class="panel-footer" align="center">
+                    <a href="{% url 'cart:add' product_id=object.id quantity=object.quantity %}"><i class="fa fa-plus-square-o fa-4x" aria-hidden="true"></i></a>
+                    <a href="{% url 'cart:remove' product_id=object.id %}"><i class="fa fa-minus-square-o fa-4x" aria-hidden="true"></i></a>
+                    {% for message in messages %}
+                    <h3 {% if message.tags %} class="{{ message.tags }}"{% endif %}>{{message}}</h3>
+                    {% endfor %}
                 </div>
 
-                {% endfor%}
-
+                {% endif %}
             </div>
-        </div>
+    <p align="center"><a href="{% url 'catalog:category' category_id=object.product_type.category_id %}" class="btn btn-primary btn-lg active" role="button" aria-pressed="true"> Вернуться назад</a></p>
+    </div>
 </div>
-
-</div>
-
 
 
 {% endblock %}
