--- a/catalog/templates/snippets/nav.html
+++ b/catalog/templates/snippets/nav.html
@@ -1,52 +1,22 @@
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">Logo</a>
-    </div>
-    <div class="col-sm-4"></div>
+
+    <div class="col-sm-5"></div>
     <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="/">Home</a></li>
-
-          <li class="nav-item">
-                <a href="{% url 'catalog:category' category_id=1 %}">
-                    TEA
-                </a>
-        </li>
-
-          <li class="nav-item">
-                <a href="{% url 'catalog:category' category_id=2 %}">
-                    COFFEE
-                </a>
-            </li>
-
-            <li class="nav-item">
-                <a href="{% url 'catalog:category' category_id=3 %}">
-                    ITEM CATEGORY 3!
-                </a>
-            </li>
-
-            <li class="nav-item">
-                <a href="{% url 'catalog:category' category_id=4 %}">
-                    ITEM CATEGORY 4!
-                </a>
-
-
-        <!--<li><a href="#">Deals</a></li>-->
-        <!--<li><a href="#">Stores</a></li>-->
-        <!--<li><a href="#">Contact</a></li>-->
+      <ul class="nav navbar-nav mx-auto">
+        <li class="active"><a href="/"><i class="fa fa-home fa-lg" aria-hidden="true"></i></a></li>
+        <li class="nav-li"><a href="{% url 'catalog:category' category_id=1 %}">ЧАЙ</a></li>
+        <li class="nav-item"><a href="{% url 'catalog:category' category_id=2 %}">КОФЕ</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
           {% if user.is_authenticated%}
-
-        <li><a href="#"><span class="glyphicon glyphicon-user"></span> {{ user }} | Your Account</a></li>
+        <li><a href="{% url 'account:cabinet' pk=user.id %}"><i class="fa fa-user-circle-o" aria-hidden="true"></i>  Привет, {{ user }}! </a></li>
+        <li><a href="{% url 'account:logout' %}">Выйти</a></li>
+        <li><a href="{% url 'cart:get' user_id=user.id%}"><i class="fa fa-cart-plus fa-lg" aria-hidden="true"></i> Cart</a></li>
+          {% else %}
+        <li><a href="{% url 'account:login'%}"><i class="fa fa-user fa-lg" aria-hidden="true"></i>  Войти </a></li>
+        <li><a href="{% url 'account:register'%}"><i class="fa fa-user-plus" aria-hidden="true"></i>  Регистрация </a></li>
           {% endif %}
-        <li><a href="#"><span class="glyphicon glyphicon-shopping-cart"></span> Cart</a></li>
       </ul>
     </div>
   </div>
