--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -14,7 +14,7 @@
             </tr>
             {% for item in cart %}
             <tr>
-                <td> {{item.cart.id}} {{ item.product.name }}</td>
+                <td>{{ item.product.name }}</td>
                 <td>{{ item.quantity }}</td>
                 <td>{{ item.total_price }}</td>
             </tr>
